--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
 		"@mui/material": "^7.1.1",
 		"@mui/styled-engine-sc": "^7.1.1",
 		"@mui/x-data-grid": "^8.5.0",
-		"@mui/x-date-pickers": "^7.1.0",
+		"@mui/x-date-pickers": "^8.5.1",
 		"@testing-library/dom": "^10.4.0",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/react": "^16.1.0",
@@ -41,10 +41,17 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": ["react-app", "react-app/jest"]
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
 	},
 	"browserslist": {
-		"production": [">0.2%", "not dead", "not op_mini all"],
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version",
